Fixed bug #65254 (Exception not catchable when exception thrown in autoload with a namespace).